{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "4a9be72f-d818-43fd-89e4-97457be1ed9d",
            "actions": [
                {
                    "name": "MovePlayer1",
                    "type": "Value",
                    "id": "f17087b6-a402-401a-a9df-87a89729c9d5",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovePlayer2",
                    "type": "Value",
                    "id": "1ed69c3b-3869-4228-b304-d892fd63756a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Arrow Movement",
                    "id": "b21aadb6-5e20-408a-94be-e8e74f6a9ba0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer1",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8c46856a-67ae-4974-9355-6896ede9529f",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d40f372a-567a-443a-aa23-2587301921a2",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "06040afe-ef0c-473f-9d38-a758de16cf21",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4287314e-9a1e-4460-a06d-01f3264f95a5",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow Movement",
                    "id": "5ab83054-5d2f-44ca-b7d7-310b2ce9041c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer2",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f95fd542-22b7-4aef-ace6-551bada7fe54",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5806ba75-373c-48df-a1e8-b96bde178c69",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1b186024-0360-448c-923e-82b5c69c8e7f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "fbd27274-83b9-4fe7-89f4-ca321c1257f3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "Normalize",
                    "groups": "",
                    "action": "MovePlayer2",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}